Fri Aug  3 12:51:58 2001  Owen Taylor  <otaylor@redhat.com>

	* daemon/slave.c (gdm_slave_exec_script): Set
	RUNNING_UNDER_GDM - we might want to know this
	when we, for instance, running the display init
	script.

2001-08-03  Kjartan Maraas  <kmaraas@gnome.org>

	* config/gdm.conf.in: Added Norwegian translations.
	
2001-08-02  Havoc Pennington  <hp@redhat.com>

	* gui/gdmlogin.c (gdm_login_session_init): add config option to
	not show the Last session item, because it's confusing to have in
	addition to Default, and interacts badly with switchdesk and
	kdm/xdm. Need a better solution, such as a unified session system
	across kdm/gdm. Lang-setting is screwed up too (e.g.
	/etc/sysconfig/i18n overrides it, and does not work for non-GNOME
	sessions).

2001-08-02  Havoc Pennington  <hp@redhat.com>

	* daemon/gdm.c (gdm_config_parse): fix format

	* daemon/server.c (display_busy): fix format 

	* daemon/verify-crypt.c (gdm_verify_user): don't put login 
	in syslog, because people accidentally type their password 
	in this field.

	* daemon/verify-shadow.c (gdm_verify_user): same

	* daemon/verify-pam.c (gdm_verify_user): same
	
	* daemon/misc.c: syslog takes a format string, don't pass it data
	we got from the user. Reported by Cyril Diakhate
	<diakhate@easynet.fr>

Thu Aug  2 03:10:23 2001  Abel Cheung <maddog@linux.org.hk>

	* daemon/display.c: GdmDisplay->name should be a %s, not %d (I think)

Tue Jul 24 20:25:00 2001  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c, daemon/gdm.h: embrace and extend xdmcp.  Add
	  an opcode for a sucessful forwarded session so that the original
	  manager can discard the indirect easily and fix some relevant bugs.
	  Still not sure about the design, will make it more robust later.

Tue Jul 24 05:21:34 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: Don't link Give/TakeConsole as those are stupid.
	  fixes bad ownership of /dev/console (which is handled by pam
	  anyway!) and fixes sessreg related bugs as well.
