@@ -83,6 +83,15 @@ fi
 
 unset XKB_IN_USE
 
+# run all system xinitrc shell scripts.
+if [ -d /etc/X11/xinit/xinitrc.d ]; then
+    for i in /etc/X11/xinit/xinitrc.d/* ; do
+        if [ -x "$i" ]; then
+	    . "$i"
+        fi
+    done
+fi
+
 if [ -x "$HOME/.gnomerc" ]; then
 	exec "$HOME/.gnomerc"
 else
