@@ -1,3 +1,8 @@
+Sat Aug 04 19:36:42 2001  George Lebl <jirka@5z.com>
+
+	* config/Gnome.in: run the scripts from /etc/X11/xinit/xinitrc.d
+	  which makes some more things work right
+
 Fri Aug  3 12:51:58 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* daemon/slave.c (gdm_slave_exec_script): Set
